# fdex

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  start-dev.sh  start.sh
.github/workflows/: deploy.yml
backend/: main.py
config/: config.yml  maps.yml
data/demographics/: congress.json  house.json  senate.json
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/scripts/: bake-config.mjs  copy-assets.mjs
frontend/src/: App.svelte  app.css
frontend/src/lib/: types.ts
frontend/src/lib/components/: BottomDrawer.svelte  ControlBar.svelte  Legend.svelte  MapView.svelte  SearchBar.svelte  Sidebar.svelte
frontend/src/lib/config/: mapInteraction.ts  mapLayers.ts
frontend/src/lib/stores/: state.svelte.ts
scripts/: DATA_SOURCES.md  fetch_district_demographics.py  fetch_district_vap.py
